<resources>
    <string name="app_name">hcm</string>
    <string name="version_lable">Version</string>
    <string name="version">1.0.0</string>

    <string name="username_label">Username</string>
    <string name="username_hint">Enter username</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="remember_login">Remember my login on device</string>

    <string name="signin">Sign in</string>
    <string name="note">
        Can\'t access your account? Please contact your <font color="#1B65E3">administrators</font>.
    </string>

    <string name="working_time">Working Time</string>
    <string name="bv_calendar">BV Calender</string>
    <string name="payslip">Payslip</string>
    <string name="seat_map">Seat Map</string>
    <string name="employees">Employees</string>
    <string name="organization_chart">Organization Chart</string>
    <string name="knowledge_base">KnowLedge Base</string>
    <string name="more_tools">More Tools</string>

    <string name="morning">Good Morning, </string>
    <string name="afternoon">Good Afternoon </string>
    <string name="evening">Good Evening </string>
    <string name="welcome">Welcome Back </string>
    <string name="hand">👋</string>

    <string name="bv_tools">BV Tools</string>

    <string name="checkout">Check out at</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="login_not_success">Username and password not found!</string>

    <string name="showing_tools">Tools Shown</string>
    <string name="hidden_tools">Hidden Tools</string>
    <string name="press_to_back">Press back again to exit!</string>
    <string name="checkout_success">Success!</string>
    <string name="checkout_not_success">Not success!</string>
    <string name="notifications">Notifications</string>
    <string name="all_notify">All</string>
    <string name="unread_notify">Unread</string>
    <string name="new_notify">New</string>
    <string name="request_notify">Request Submission</string>
    <string name="mark_all">Mark all as read</string>
    <string name="request_manager">Request Management</string>
    <string name="readed">Mark as read</string>
    <string name="remove">Remove the notification</string>
    <string name="settings">Settings</string>
    <string name="personal">Personal Information</string>
    <string name="notify_sounds"><![CDATA[Notifications & Sound]]></string>
    <string name="language">Choose Language</string>
    <string name="message">Message</string>
    <string name="help"><![CDATA[Help & Feedback]]></string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_content">Do you want to sign out?</string>
    <string name="turn_off_notify">Turn off notification</string>
    <string name="for_15_minutes">For 15 minutes</string>
    <string name="for_30_minutes">For 30 minutes</string>
    <string name="for_1_hour">For 1 hour</string>
    <string name="for_4_hours">For 4 hours</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="summary">Summary</string>
    <string name="employee_ducation">Employee Duration</string>
    <string name="education">Education</string>
    <string name="shui">SHUI</string>
    <string name="access_token">Access Token</string>
    <string name="sound_on">Sound on</string>
    <string name="choose_language">Choose language</string>
    <string name="vietnam">Vietnamese</string>
    <string name="english">English</string>
    <string name="notices">Internal Notices</string>
    <string name="search_employee_hint">Search by CIF, Full Name, Team</string>
    <string name="employee_label">employees</string>
    <string name="cif">CIF</string>
    <string name="dob">Day of birth</string>
    <string name="gender">Gender</string>
    <string name="married">Marital status</string>
    <string name="team">Team</string>
    <string name="office">Office</string>
    <string name="join">Join date</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="policy">Policy</string>
    <string name="position">Position</string>
    <string name="checkinout_title">Check in / Check out</string>
    <string name="notification_content">Notification</string>
    <string name="nation">Nationality</string>
    <string name="employee">Employee Information</string>
</resources>