<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/turn_off_notify"
        android:textColor="@color/blue"
        android:layout_marginVertical="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_text"/>

    <RadioGroup
        android:id="@+id/rdg_time"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rd_15"
            android:text="@string/for_15_minutes"
            android:textSize="18sp"
            android:buttonTint="@color/light_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rd_30"
            android:text="@string/for_30_minutes"
            android:textSize="18sp"
            android:buttonTint="@color/light_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rd_1h"
            android:text="@string/for_1_hour"
            android:textSize="18sp"
            android:buttonTint="@color/light_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rd_4h"
            android:text="@string/for_4_hours"
            android:textSize="18sp"
            android:buttonTint="@color/light_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_text"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_close"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_save"
            android:text="@string/close"
            android:height="40dp"
            android:textSize="18sp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_save"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_close"
            android:text="@string/save"
            android:height="40dp"
            android:textSize="18sp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>