<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/settings"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:textSize="28sp" />
    
    <RelativeLayout
        android:id="@+id/personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_person"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_person"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/iv_person"
            android:fontFamily="@font/inter_medium"
            android:text="@string/personal"
            android:textSize="18sp" />
        
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:tint="@color/light_text"
            android:src="@drawable/ic_arrow_right"/>
    </RelativeLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_text"/>
    
    <RelativeLayout
        android:id="@+id/notify_sounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_notify"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_notify"
            android:layout_gravity="center_vertical"
            app:tint="@color/blue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/iv_notify"
            android:fontFamily="@font/inter_medium"
            android:text="@string/notify_sounds"
            android:textSize="18sp" />
        
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:tint="@color/light_text"
            android:src="@drawable/ic_arrow_right"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_text"/>
    
    <RelativeLayout
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_language"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_language"
            android:layout_gravity="center_vertical"
            app:tint="@color/blue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/iv_language"
            android:fontFamily="@font/inter_medium"
            android:text="@string/language"
            android:textSize="18sp" />
        
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:tint="@color/light_text"
            android:src="@drawable/ic_arrow_right"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_text"/>
    
    <RelativeLayout
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_message"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_message"
            android:layout_gravity="center_vertical"
            app:tint="@color/blue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/iv_message"
            android:fontFamily="@font/inter_medium"
            android:text="@string/message"
            android:textSize="18sp" />
        
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:tint="@color/light_text"
            android:src="@drawable/ic_arrow_right"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_text"/>
    
    <RelativeLayout
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_help"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_help"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/iv_help"
            android:fontFamily="@font/inter_medium"
            android:text="@string/help"
            android:textSize="18sp" />
        
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:tint="@color/light_text"
            android:src="@drawable/ic_arrow_right"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_text"/>
    
    <RelativeLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_about"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_about"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/iv_about"
            android:fontFamily="@font/inter_medium"
            android:text="@string/about"
            android:textSize="18sp" />
        
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:tint="@color/light_text"
            android:src="@drawable/ic_arrow_right"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_text"/>
    
    <RelativeLayout
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_sign_out"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_sign_out"
            app:tint="@color/red"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/iv_sign_out"
            android:fontFamily="@font/inter_medium"
            android:text="@string/sign_out"
            android:textSize="18sp" />
        
        <ImageView
            android:layout_alignParentEnd="true"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:tint="@color/light_text"
            android:src="@drawable/ic_arrow_right"/>
    </RelativeLayout>
    
</LinearLayout>