<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="180dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal">
    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/checkout"
            android:fontFamily="@font/inter_medium"/>
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:fontFamily="@font/inter_medium"/>
    </LinearLayout>
    <View
        android:layout_above="@id/condition"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_text"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/condition"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/btn_no"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/view"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/no"
            android:textSize="18sp"
            android:fontFamily="@font/inter_medium"
            android:layout_gravity="center_horizontal"/>
        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="match_parent"
            android:background="@color/light_text"/>
        <Button
            android:id="@+id/btn_yes"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/view"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/yes"
            android:textSize="18sp"
            android:fontFamily="@font/inter_medium"
            android:layout_gravity="center_horizontal"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>