<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="0dp"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/tv_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/notifications"
                android:textSize="28sp" />

            <ImageButton
                android:id="@+id/ibt_setting_notify"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_setting"
                app:tint="@color/blue" />

            <ImageButton
                android:id="@+id/ibt_ignore_notify"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/ibt_setting_notify"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_notification"
                app:tint="@color/blue" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_btn"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_title"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="0dp"
            android:paddingHorizontal="16dp">

            <Button
                android:id="@+id/btn_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/notify_type"
                android:fontFamily="@font/inter_light"
                android:text="@string/all_notify"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_unread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/notify_type"
                android:fontFamily="@font/inter_light"
                android:text="@string/unread_notify"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:backgroundTint="@color/background_notify" />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab"
            android:layout_below="@id/layout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp2_notifications"
            android:layout_below="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>

    <include layout="@layout/option_notification"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>